assets/sass/base/_typography.sass
@import url("https://use.typekit.net/lbh6wkf.css")

$primary-color: #8ab61d
$secondary-color: #007344
$light-blue: #3CB5E7
$dark-blue: #017DC2
$light-red: #fe000031
$light-green-gradient: linear-gradient(90deg, #91A80D 42.99%, #BAC323 68.59%, #9EA100 95.04%)
$dark-grey: #58595E
$darken-grey: #636362
$light-grey: #F5F5F5
$green: #8ab61d
$green-gradient: linear-gradient(90deg, #91A80D 0%, #BAC323 59.56%, #9EA100 95.31%)
$dark-green: #007344
$dark-green-gradient: linear-gradient(90.08deg, #00783B 1.93%, #009E55 53.39%, #006B38 95.4%)
$red: #E84040
$white: white
$mid-grey: #D3D3D3
$font-family: "remora-sans-w1", sans-serif
$yellow: #F5A623

$body-font-family: "remora-sans-w1", sans-serif !default
$h1-font-size: 32px
$h2-font-size: 28px


.v-application, html, body, h1, h2, h3, h4, h5, p, div, a, i, .text-h1, .text-h2, .text-h3, .text-h4, .text-h5, .text-h6, span *
  font-family: $font-family !important


h1
  color: $dark-grey
  margin-bottom: 10px
  $font-size: $h1-font-size !default
  &.is-primary
    color: $primary-color

h2
  color: $dark-grey
  &.is-primary
    color: $primary-color
    $font-size: $h2-font-size !default

ul
  margin-left: 20px

a
  text-decoration: none
  &:visited
    color: inherit


//font-sizes

.has-font-size-small-medium
  font-size: 18px

.has-font-size-medium
  font-size: 22px

.has-font-size-big
  font-size: 26px

.word-break
  word-break: break-word
  -webkit-hyphens: auto
  -ms-hyphens: auto
  hyphens: auto
  
.break-text
  word-break: break-word
  overflow: hidden
  display: -webkit-box
  -webkit-line-clamp: 4
  line-clamp: 4
  -webkit-box-orient: vertical

.break-title
  word-break: break-word
  overflow: hidden
  display: -webkit-box
  -webkit-line-clamp: 1
  line-clamp: 1
  -webkit-box-orient: vertical

.text-wrap
  text-align: justify
  display: inline-block

.break-text h1
  font-size: 1.2rem

.break-text h2
  font-size: 1.2rem

.break-text h3
  font-size: 1.2rem

.break-title h1
  font-size: 1.2rem

.break-title h2
  font-size: 1.2rem

.break-title h3
  font-size: 1.2rem

.general-font-size
  font-size: 1.4rem
  font-weight: 300

